# themwalls

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  setup.sh  version_history
autom4te.cache/: output.0  requests  traces.0  traces.1
autostart/: Makefile  README-autostart  walltalk.desktop  walltalk.sh
pixmaps/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  main.c  main.h  threads.c  threads.h  usb_manage.c  usb_manage.h
src/.deps/: callbacks.Po  gtkmeter.Po  gtkmeterscale.Po  interface.Po  main.Po  meters.Po  support.Po  threads.Po  usb_manage.Po
src/pbrx/: Makefile  Makefile.am  Makefile.in  rfpbrx.c  rfpbrx.cpp  rfpbrx_api.cpp  rfpbrx_api.h
usr_setup/: setup.sh  test.txt
usr_setup/access_point/: dnsmasq.conf  hostapd.conf  hosts  interfaces  interfaces_000  nginx.conf  wpa_supplicant.conf
usr_setup/webpage/: setup.py  walltalk-for-usr-setup.sh  walltalk.py
usr_setup/webpage/walltalk/: __init__.py
usr_setup/webpage/walltalk/static/: app.html  walltalk.js
